Name:               kmeans
Version:            0.1.2
Description:        A simple library for k-means clustering
Category:           algorithms, clustering, data mining
Synopsis:           K-means clustering algorithm
License:            BSD3
License-file:       LICENSE
Author:             Keegan Carruthers-Smith
Maintainer:         gershomb@gmail.com
Stability:          Alpha
Build-Type:         Simple
Cabal-Version:      >= 1.2

Library
    Build-Depends:  base >= 3 && < 5

    Exposed-Modules:
        Data.KMeans
