name:           text
version:        0.11.2.3
homepage:       https://github.com/bos/text
bug-reports:    https://github.com/bos/text/issues
synopsis:       An efficient packed Unicode text type.
description:
    .
    An efficient packed, immutable Unicode text type (both strict and
    lazy), with a powerful loop fusion optimization framework.
    .
    The 'Text' type represents Unicode character strings, in a time and
    space-efficient manner. This package provides text processing
    capabilities that are optimized for performance critical use, both
    in terms of large data quantities and high speed.
    .
    The 'Text' type provides character-encoding, type-safe case
    conversion via whole-string case conversion functions. It also
    provides a range of functions for converting 'Text' values to and from
    'ByteStrings', using several standard encodings.
    .
    Efficient locale-sensitive support for text IO is also supported.
    .
    These modules are intended to be imported qualified, to avoid name
    clashes with Prelude functions, e.g.
    .
    > import qualified Data.Text as T
    .
    To use an extended and very rich family of functions for working
    with Unicode text (including normalization, regular expressions,
    non-standard encodings, text breaking, and locales), see
    the @text-icu@ package:
    <http://hackage.haskell.org/package/text-icu>
    .
    &#8212;&#8212; RELEASE NOTES &#8212;&#8212;
    .
    Changes in 0.11.2.0:
    .
    * String literals are now converted directly from the format in
      which GHC stores them into 'Text', without an intermediate
      transformation through 'String', and without inlining of
      conversion code at each site where a string literal is declared.
    .
license:        BSD3
license-file:   LICENSE
author:         Bryan O'Sullivan <bos@serpentine.com>
maintainer:     Bryan O'Sullivan <bos@serpentine.com>
copyright:      2009-2011 Bryan O'Sullivan, 2008-2009 Tom Harper
category:       Data, Text
build-type:     Simple
cabal-version:  >= 1.8
extra-source-files:
    -- scripts/CaseFolding.txt
    -- scripts/SpecialCasing.txt
    README.markdown
    benchmarks/Setup.hs
    benchmarks/cbits/*.c
    benchmarks/haskell/*.hs
    benchmarks/haskell/Benchmarks/*.hs
    benchmarks/python/*.py
    benchmarks/ruby/*.rb
    benchmarks/text-benchmarks.cabal
    scripts/*.hs
    tests-and-benchmarks.markdown
    tests/*.hs
    tests/.ghci
    tests/Makefile
    tests/Tests/*.hs
    tests/scripts/*.sh
    tests/text-tests.cabal

flag developer
  description: operate in developer mode
  default: False

flag integer-simple
  description: Use the simple integer library instead of GMP
  default: False

library
  c-sources: cbits/cbits.c

  exposed-modules:
    Data.Text
    Data.Text.Array
    Data.Text.Encoding
    Data.Text.Encoding.Error
    Data.Text.Foreign
    Data.Text.IO
    Data.Text.Internal
    Data.Text.Lazy
    Data.Text.Lazy.Builder
    Data.Text.Lazy.Builder.Int
    Data.Text.Lazy.Builder.RealFloat
    Data.Text.Lazy.Encoding
    Data.Text.Lazy.IO
    Data.Text.Lazy.Internal
    Data.Text.Lazy.Read
    Data.Text.Read
  other-modules:
    Data.Text.Encoding.Fusion
    Data.Text.Encoding.Fusion.Common
    Data.Text.Encoding.Utf16
    Data.Text.Encoding.Utf32
    Data.Text.Encoding.Utf8
    Data.Text.Fusion
    Data.Text.Fusion.CaseMapping
    Data.Text.Fusion.Common
    Data.Text.Fusion.Internal
    Data.Text.Fusion.Size
    Data.Text.IO.Internal
    Data.Text.Lazy.Builder.Functions
    Data.Text.Lazy.Builder.RealFloat.Functions
    Data.Text.Lazy.Encoding.Fusion
    Data.Text.Lazy.Fusion
    Data.Text.Lazy.Search
    Data.Text.Private
    Data.Text.Search
    Data.Text.Unsafe
    Data.Text.Unsafe.Base
    Data.Text.UnsafeChar
    Data.Text.UnsafeShift
    Data.Text.Util

  build-depends:
    array,
    base       < 5,
    bytestring >= 0.9
  if impl(ghc >= 6.10)
    build-depends:
      ghc-prim, base >= 4, deepseq >= 1.1.0.0
    cpp-options: -DHAVE_DEEPSEQ
  else
    build-depends: extensible-exceptions
    extensions: PatternSignatures

  ghc-options: -Wall -funbox-strict-fields -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs
  if flag(developer)
    ghc-prof-options: -auto-all
    ghc-options: -Werror
    cpp-options: -DASSERTS

  if impl(ghc >= 6.11)
    if flag(integer-simple)
      cpp-options: -DINTEGER_SIMPLE
      build-depends: integer-simple >= 0.1 && < 0.5
    else
      cpp-options: -DINTEGER_GMP
      build-depends: integer-gmp >= 0.2


  if impl(ghc >= 6.9) && impl(ghc < 6.11)
    cpp-options: -DINTEGER_GMP
    build-depends: integer >= 0.1 && < 0.2

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Tests.hs
  -- c-sources:      cbits/cbits.c

  ghc-options:
    -Wall -threaded -O0 -rtsopts

  cpp-options:
    -DASSERTS -DHAVE_DEEPSEQ

  build-depends:
    HUnit >= 1.2,
    QuickCheck >= 2.4,
    base,
    bytestring,
    deepseq,
    directory,
    ghc-prim,
    random,
    test-framework >= 0.4,
    test-framework-hunit >= 0.2,
    test-framework-quickcheck2 >= 0.2,
    text

source-repository head
  type:     git
  location: https://github.com/bos/text

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/text
