cabal-version:      2.4
name:               profiling-driver
version:            0.9.2.5.0
synopsis:           A ghc replacement that can be used to profile plugins
description:        The usual binary distributions of GHC cannot be used to profile
                    plugins because GHC is not built with the profiling runtime. This
                    package provides a GHC replacement that can be built with
                    profiling enabled and can then load plugins built with profiling
                    enabled.
license:            BSD-3-Clause
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Facundo Domínguez
maintainer:         Facundo Domínguez <jhala@tweag.io>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Simple
tested-with:        GHC == 9.6.3

source-repository head
  type:     git
  location: https://github.com/ucsd-progsys/liquidhaskell/

flag devel
  default:     False
  manual:      True
  description: Enable more warnings and fail compilation when warnings occur.
               Turn this flag on in CI.

executable profiling-driver
  main-is:          ProfilingDriver.hs
  build-depends:    base            >= 4.8.1.0 && < 5
                  , ghc             >= 9.6  && < 9.10
                  , ghc-paths
  default-language: Haskell2010
  ghc-options:      -W

  if flag(devel)
    ghc-options:    -Wall -Wno-name-shadowing -Werror
