Name:           vector-tests
Version:        0.9.1
License:        BSD3
License-File:   LICENSE
Author:         Max Bolingbroke, Roman Leshchinskiy
Maintainer:     Roman Leshchinskiy <rl@cse.unsw.edu.au>
Copyright:      (c) Max Bolinbroke, Roman Leshchinskiy 2008-2010
Homepage:       http://darcs.haskell.org/vector
Category:       Data Structures
Synopsis:       Efficient Arrays
Description:
        Tests for the vector package

Cabal-Version:  >= 1.2
Build-Type:     Simple


Executable "vector-tests-O0"
  Main-Is:  Main.hs

  Build-Depends: base >= 4 && < 5, template-haskell, vector == 0.9.1,
                 random,
                 QuickCheck >= 2, test-framework, test-framework-quickcheck2

  Extensions: CPP,
              ScopedTypeVariables,
              PatternGuards,
              MultiParamTypeClasses,
              FlexibleContexts,
              Rank2Types,
              TypeSynonymInstances,
              TypeFamilies,
              TemplateHaskell

  Ghc-Options: -O0
  Ghc-Options: -Wall -fno-warn-orphans -fno-warn-missing-signatures

Executable "vector-tests-O2"
  Main-Is:  Main.hs

  Build-Depends: base >= 4 && < 5, template-haskell, vector == 0.9.1,
                 random,
                 QuickCheck >= 2, test-framework, test-framework-quickcheck2

  Extensions: CPP,
              ScopedTypeVariables,
              PatternGuards,
              MultiParamTypeClasses,
              FlexibleContexts,
              Rank2Types,
              TypeSynonymInstances,
              TypeFamilies,
              TemplateHaskell

  Ghc-Options: -O2
  Ghc-Options: -Wall -fno-warn-orphans -fno-warn-missing-signatures

